--- a/game-project/src/components/Square/Square.module.css
+++ b/game-project/src/components/Square/Square.module.css
@@ -2,3 +2,17 @@
   width: 50px;
   height: 50px;
 }
+
+.buttons {
+  border: 1px solid #0066cc;
+  background-color: #0099cc;
+  color: #ffffff;
+  padding: 5px 10px;
+}
+
+.buttons:hover {
+  border: 1px solid #0099cc;
+  background-color: #00aacc;
+  color: #ffffff;
+  padding: 5px 10px;
+}
